chore: hoist dependencies and solidify semver ranges (#7231)
* chore: remove Babel dependencies from package.json and package-lock.json

* fix: update @octokit/rest dependency version to exact match

* fix: update @playwright/test dependency version to exact match

* fix: remove unused @types/lodash-es dependency from package.json and package-lock.json

* fix: update @typescript-eslint/eslint-plugin dependency version to exact match

* fix: update @typescript-eslint/parser dependency version to exact match

* fix: update beachball dependency version to exact match

* fix: remove chalk dependency from package.json and package-lock.json

* fix: update concurrently dependency version to exact match

* fix: remove dotenv dependency from package.json and package-lock.json

* fix: update eslint dependency version to exact match

* fix: update eslint-config-prettier dependency version to exact match

* fix: update eslint-plugin-import dependency version to exact match

* fix: update glob dependency version to exact match

* fix: update husky dependency version to exact match

* fix: update lint-staged dependency version to exact match

* fix: update markdown-it dependency version to exact match

* fix: update rimraf dependency version to exact match

* fix: remove ts-node dependency version

* fix: update vite dependency version to exact match

* chore: update yargs to version 17.7.2 in package.json and package-lock.json

* fix: update webpack-dev-server dependency version to exact match

* fix: update typescript dependency version to exact match

* hoist @jsdevtools/coverage-istanbul-loader and use exact match

* hoist @microsoft/api-extractor to root

* hoist @rollup/plugin-node-resolve

* hoist @rollup/plugin-terser

* hoist @rollup/plugin-typescript

* hoist @tensile-perf/web-components

* hoist type packages

* hoist chai and lock version to 4.4.1

* hoist chai-spies and lock to version 1.1.0

* hoist esm to version 3.2.25

* hoist ignore-loader and lock to version 0.

--- a/packages/fast-router/package.json
+++ b/packages/fast-router/package.json
@@ -34,8 +34,8 @@
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
     "test": "npm run eslint && npm run test-chrome:verbose && npm run doc:ci",
-    "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
-    "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
+    "test-node": "nyc --reporter=lcov --reporter=text-summary --report-dir=coverage/node --temp-dir=coverage/.nyc_output mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
+    "test-node:verbose": "nyc --reporter=lcov --reporter=text-summary --report-dir=coverage/node --temp-dir=coverage/.nyc_output mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-chrome": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage",
     "test-chrome:verbose": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage --reporter=mocha",
     "test-chrome:watch": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --coverage --watch-extensions js",
@@ -45,41 +45,11 @@
     "test-firefox": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage",
     "test-firefox:verbose": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage --reporter=mocha"
   },
+  "dependencies": {
+    "tslib": "^2.6.3"
+  },
   "devDependencies": {
-    "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
-    "@microsoft/api-extractor": "^7.47.0",
-    "@microsoft/fast-element": "^2.9.1",
-    "@types/chai": "^4.2.11",
-    "@types/karma": "^6.3.3",
-    "@types/mocha": "^7.0.2",
-    "@types/webpack-env": "^1.15.2",
-    "chai": "^4.2.0",
-    "esm": "^3.2.25",
-    "ignore-loader": "^0.1.2",
-    "istanbul": "^0.4.5",
-    "jsdom": "^16.2.2",
-    "jsdom-global": "3.0.2",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.2",
-    "karma-coverage-istanbul-reporter": "^3.0.0",
-    "karma-firefox-launcher": "^2.1.0",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-source-map-support": "^1.4.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^5.0.1",
-    "mocha": "^10.5.2",
-    "prettier": "2.8.8",
-    "source-map": "^0.7.3",
-    "source-map-loader": "^5.0.0",
-    "ts-loader": "^9.3.0",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^3.9.0",
-    "tslib": "^2.6.3",
-    "typescript": "~4.7.0",
-    "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4"
+    "@microsoft/fast-element": "^2.9.1"
   },
   "peerDependencies": {
     "@microsoft/fast-element": "^2.9.1"
