--- a/package.json
+++ b/package.json
@@ -55,34 +55,66 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
-    "@octokit/rest": "^22.0.0",
-    "@playwright/test": "^1.56.1",
-    "@types/lodash-es": "^4.17.4",
-    "@types/node": "^22.12.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "beachball": "^2.51.0",
-    "chalk": "^2.4.2",
-    "concurrently": "^9.2.1",
-    "dotenv": "^6.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.25.0",
-    "glob": "^10.5.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.1.2",
-    "markdown-it": "^12.3.2",
+    "@ast-grep/cli": "0.37.0",
+    "@jsdevtools/coverage-istanbul-loader": "3.0.5",
+    "@microsoft/api-extractor": "7.47.0",
+    "@octokit/rest": "22.0.0",
+    "@playwright/test": "1.56.1",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-terser": "0.4.4",
+    "@rollup/plugin-typescript": "8.5.0",
+    "@tensile-perf/web-components": "0.2.3",
+    "@types/node": "22.18.11",
+    "@types/chai": "4.3.16",
+    "@types/chai-spies": "1.0.6",
+    "@types/karma": "6.3.8",
+    "@types/mocha": "7.0.2",
+    "@types/express": "4.17.21",
+    "@types/webpack-env": "1.18.5",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "beachball": "2.51.0",
+    "chai": "4.4.1",
+    "chai-spies": "1.1.0",
+    "concurrently": "9.2.1",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "esm": "3.2.25",
+    "express": "4.22.1",
+    "glob": "10.5.0",
+    "husky": "4.3.8",
+    "ignore-loader": "0.1.2",
+    "jsdom": "16.7.0",
+    "jsdom-global": "3.0.2",
+    "karma": "6.4.3",
+    "karma-chrome-launcher": "3.2.0",
+    "karma-coverage": "2.2.1",
+    "karma-firefox-launcher": "2.1.3",
+    "karma-mocha": "2.0.1",
+    "karma-mocha-reporter": "2.2.5",
+    "karma-source-map-support": "1.4.0",
+    "karma-sourcemap-loader": "0.4.0",
+    "karma-webpack": "5.0.1",
+    "lint-staged": "10.5.4",
+    "markdown-it": "12.3.2",
+    "mocha": "10.8.2",
+    "nyc": "17.1.0",
     "prettier": "2.8.8",
-    "rimraf": "^6.1.0",
-    "ts-node": "^8.8.2",
-    "typescript": "~4.7.0",
-    "vite": "^7.1.12",
-    "yargs": "^16.2.0"
+    "rimraf": "6.1.0",
+    "rollup": "2.79.2",
+    "rollup-plugin-filesize": "10.0.0",
+    "source-map": "0.7.4",
+    "source-map-loader": "5.0.0",
+    "ts-loader": "9.5.1",
+    "typescript": "5.3.3",
+    "vite": "7.1.12",
+    "webpack": "5.97.1",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "5.2.2",
+    "yargs": "17.7.2"
   },
   "overrides": {
-    "webpack-dev-server": "^5.2.2",
     "sucrase": {
       "glob": "$glob"
     },
