--- a/packages/fast-element/package.json
+++ b/packages/fast-element/package.json
@@ -118,8 +118,8 @@
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
     "test": "npm run eslint && npm run test-chrome:verbose && npm run doc:ci && npm run doc:exports:ci",
-    "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
-    "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
+    "test-node": "nyc --reporter=lcov --reporter=text-summary --report-dir=coverage/node --temp-dir=coverage/.nyc_output mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
+    "test-node:verbose": "nyc --reporter=lcov --reporter=text-summary --report-dir=coverage/node --temp-dir=coverage/.nyc_output mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-chrome": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage",
     "test-chrome:verbose": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage --reporter=mocha",
     "test-chrome:watch": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --coverage --watch-extensions js",
@@ -128,46 +128,5 @@
     "test-chrome:verbose:debugger": "karma start karma.conf.cjs --browsers=ChromeDebugging --reporter=mocha",
     "test-firefox": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage",
     "test-firefox:verbose": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage --reporter=mocha"
-  },
-  "devDependencies": {
-    "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
-    "@microsoft/api-extractor": "^7.47.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "@tensile-perf/web-components": "^0.2.3",
-    "@types/chai": "^4.2.11",
-    "@types/chai-spies": "^1.0.3",
-    "@types/karma": "^6.3.3",
-    "@types/mocha": "^7.0.2",
-    "@types/webpack-env": "^1.18.5",
-    "chai": "^4.2.0",
-    "chai-spies": "^1.0.0",
-    "esm": "^3.2.25",
-    "ignore-loader": "^0.1.2",
-    "istanbul": "^0.4.5",
-    "jsdom": "^16.2.2",
-    "jsdom-global": "3.0.2",
-    "karma": "^6.4.3",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage": "^2.2.1",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-firefox-launcher": "^2.1.3",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-source-map-support": "^1.4.0",
-    "karma-sourcemap-loader": "^0.4.0",
-    "karma-webpack": "^5.0.1",
-    "mocha": "^10.5.2",
-    "prettier": "2.8.8",
-    "rollup": "^2.71.1",
-    "rollup-plugin-filesize": "^10.0.0",
-    "source-map": "^0.7.3",
-    "source-map-loader": "^5.0.0",
-    "ts-loader": "^9.3.0",
-    "ts-node": "^8.9.1",
-    "tsconfig-paths": "^3.9.0",
-    "tslib": "^2.6.3",
-    "typescript": "~4.7.0"
   }
 }
