--- a/packages/fast-html/package.json
+++ b/packages/fast-html/package.json
@@ -61,12 +61,7 @@
     "@microsoft/fast-element": "^2.9.1"
   },
   "devDependencies": {
-    "@ast-grep/cli": "^0.37.0",
-    "@microsoft/api-extractor": "^7.47.0",
-    "@microsoft/fast-element": "^2.9.1",
-    "@types/express": "^4.17.21",
-    "@types/node": "^17.0.17",
-    "typescript": "~5.3.0"
+    "@microsoft/fast-element": "^2.9.1"
   },
   "beachball": {
     "disallowedChangeTypes": [
