--- a/packages/fast-ssr/package.json
+++ b/packages/fast-ssr/package.json
@@ -59,13 +59,8 @@
     "@microsoft/fast-element": "^2.9.1"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.47.0",
     "@microsoft/fast-element": "^2.9.1",
-    "@microsoft/fast-foundation": "^3.0.0-alpha.33",
-    "@types/express": "^4.17.21",
-    "@types/node": "^17.0.17",
-    "express": "^4.19.2",
-    "typescript": "~5.3.0"
+    "@microsoft/fast-foundation": "^3.0.0-alpha.33"
   },
   "beachball": {
     "disallowedChangeTypes": [
