--- a/sites/website/package.json
+++ b/sites/website/package.json
@@ -29,19 +29,17 @@
     ]
   },
   "dependencies": {
-    "@docusaurus/core": "^3.2.1",
-    "@docusaurus/module-type-aliases": "^3.2.1",
-    "@docusaurus/preset-classic": "^3.2.1",
-    "@docusaurus/theme-live-codeblock": "^3.2.1",
-    "@docusaurus/theme-mermaid": "^3.2.1",
-    "@docusaurus/types": "^3.2.1",
-    "@mdx-js/react": "^3.0.1",
-    "@microsoft/api-documenter": "^7.28.0",
-    "@types/react": "^18.3.1",
-    "concurrently": "^8.0.0",
-    "prism-react-renderer": "^2.3.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "typescript": "~4.7.0"
+    "@docusaurus/core": "3.4.0",
+    "@docusaurus/module-type-aliases": "3.4.0",
+    "@docusaurus/preset-classic": "3.4.0",
+    "@docusaurus/theme-live-codeblock": "3.4.0",
+    "@docusaurus/theme-mermaid": "3.4.0",
+    "@docusaurus/types": "3.4.0",
+    "@mdx-js/react": "3.0.1",
+    "@microsoft/api-documenter": "7.28.0",
+    "@types/react": "18.3.3",
+    "prism-react-renderer": "2.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   }
 }
