Update git config on publish pipeline

--- a/azure-pipelines-cd.yml
+++ b/azure-pipelines-cd.yml
@@ -19,6 +19,8 @@ steps:
   - checkout: self
     persistCredentials: "true"
 
+  - script: git config --global user.email fastsvc@microsoft.com && git config --global user.name "Microsoft FAST Builds"
+
   - task: UseNode@1
     inputs:
       version: "22.x"
