--- a/sites/website/package.json
+++ b/sites/website/package.json
@@ -9,12 +9,8 @@
     "copy-static": "node src/copy-static.js",
     "generate-docs": "node src/generate-docs.js",
     "prebuild": "npm run clean && npm run generate-docs && npm run copy-static",
-    "build": "docusaurus build",
-    "prestart": "npm run prebuild",
-    "serve": "docusaurus serve",
-    "start": "docusaurus start",
-    "swizzle": "docusaurus swizzle",
-    "test": "npx docusaurus-mdx-checker"
+    "build": "npx @11ty/eleventy",
+    "start": "npx @11ty/eleventy --serve"
   },
   "browserslist": {
     "production": [
@@ -29,17 +25,7 @@
     ]
   },
   "dependencies": {
-    "@docusaurus/core": "3.4.0",
-    "@docusaurus/module-type-aliases": "3.4.0",
-    "@docusaurus/preset-classic": "3.4.0",
-    "@docusaurus/theme-live-codeblock": "3.4.0",
-    "@docusaurus/theme-mermaid": "3.4.0",
-    "@docusaurus/types": "3.4.0",
-    "@mdx-js/react": "3.0.1",
-    "@microsoft/api-documenter": "7.28.0",
-    "@types/react": "18.3.3",
-    "prism-react-renderer": "2.3.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "@11ty/eleventy": "^3.1.2",
+    "@microsoft/api-documenter": "7.28.0"
   }
 }
