--- a/sites/website/package.json
+++ b/sites/website/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "clean": "node ../../build/clean.js build",
-    "prebuild": "node scripts/generate-docs.cjs",
+    "clean:build": "node ../../build/clean.js build",
+    "clean:tmp": "node ../../build/clean.js tmp",
+    "clean": "npm run clean:tmp && npm run clean:build",
+    "prebuild": "npm run clean && node scripts/generate-docs.cjs",
     "build": "npm run prebuild && npx @11ty/eleventy --output=build --input=src",
     "start": "npm run prebuild && npx @11ty/eleventy --output=build --input=src --serve",
     "help": "npx @11ty/eleventy --help"
