allow monorepo build scripts to be referenced in the workspace

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
+    "build",
     "packages/*",
     "sites/website",
     "examples/todo-app",
