--- a/package.json
+++ b/package.json
@@ -63,10 +63,9 @@
     "@rollup/plugin-node-resolve": "15.2.3",
     "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "8.5.0",
-    "@tensile-perf/web-components": "0.2.3",
+    "@tensile-perf/web-components": "^0.2.3",
     "@types/chai": "4.3.16",
     "@types/chai-spies": "1.0.6",
-    "@types/express": "4.17.21",
     "@types/karma": "6.3.8",
     "@types/mocha": "7.0.2",
     "@types/node": "22.18.11",
