chore: enable verbatimModuleSyntax to identify type-only imports and exports

--- a/packages/fast-element/tsconfig.json
+++ b/packages/fast-element/tsconfig.json
@@ -3,7 +3,7 @@
     "compilerOptions": {
         "declarationDir": "dist/dts",
         "outDir": "dist/esm",
-        "importsNotUsedAsValues": "error",
+        "verbatimModuleSyntax": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "noImplicitAny": false,
