--- a/packages/bench/tsconfig.json
+++ b/packages/bench/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
         "outDir": "dist",
+        "noEmit": true,
+        "allowImportingTsExtensions": true,
         "experimentalDecorators": true,
         "target": "ES2022",
         "module": "ES2022",
