--- a/packages/bench/package.json
+++ b/packages/bench/package.json
@@ -7,7 +7,7 @@
     "bundle": "vite build",
     "serve": "vite --clearScreen false",
     "start": "node server/server.mjs",
-    "bench": "node src/bench.ts"
+    "bench": "vite build && node src/bench.ts"
   },
   "dependencies": {
     "@microsoft/fast-element": "*",
